Changed font size of project cards to fix overlap

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -57,6 +57,7 @@
 
 .repo-description {
   word-wrap: break-word;
+  font-size: 0.9rem;
   text-align: left;
   display: -webkit-box;
   font-family: "Google Sans Regular";
